# PokemonRedExperiments

./: .gitattributes  .gitignore  Agent_Visualization.ipynb  BetterMapVis.ipynb  BetterMapVis_script_version.py  BetterMapVis_script_version_FINAL_STATE.py  BetterMapVis_script_version_FLOW.py  BetterMapVis_script_version_PROG_COLOR.py  CLASSME.md  CONTRIBUTING.md  Dockerfile  Interacting_with_CLIP_Pokemon.ipynb  LICENSE  MapWalkingVis.ipynb  Map_Stitching.ipynb  README.md  VisualizeProgress.ipynb  agent_play_env.py  delete_empty_imgs.sh  explore_reward_knn.py  fast_text_start.state  gb_dataset.py  has_name.state  has_pokedex_nballs.state  init.state  installs.sh  interactive_game.py  pixi.toml  pokemon_red_bot.py  pyproject.toml  random_agent.py  red_game.py  requirements.txt  rnn_agent.py  rnn_model.py  rnn_trainer.py  rollout.py  run_game.py  run_random_agent.py  run_rnn_agent.py  (+5 more)
baselines/: Visualizations over time.ipynb  Visualizations_over_time.ipynb  argparse_pokemon.py  baseline_fast_minimal.py  baseline_fast_v2.py  baseline_fast_v3.py  baselines_utils.py  events.json  evo_algo_actions_stream.py  memory_addresses.py  menu.py  random_actions_stream.py  reader_pyboy.py  red_gym_env.py  red_gym_env_ray.py  red_gym_env_v2.py  red_gym_env_v3_minimal.py  render_all_needed_grids.py  render_all_needed_grids.sh  renderer.py  requirements-unfrozen.txt  requirements.txt  rewards.py  run_baseline.py  run_baseline_parallel.py  run_baseline_parallel_fast.py  run_fast_fresh.py  run_pretrained_interactive.py  run_recorded_actions.py  saves_to_record.txt  stream_agent_wrapper.py  (+3 more)
(+77 files in other folders)
